...
                          link: urlFieldLayerLink,
                          child: Builder(
                            builder: (context) {
                              return Container(
                                key: urlFieldTargetKey,
                                child: TextField(
                                  key: const Key('browser.url_field'),
                                  controller: tab.urlController,
                                  focusNode: tab.urlFocusNode,
                                  onChanged: (value) => onUrlChanged(value),
                                  style: TextStyle(
                                    color: toolbarForeground,
                                    fontSize: 13,
...
